try fix header time alignment on mobile

--- a/src/modules/BreakfreeTradingSocial/components/sonar-feed-card/sonar-feed-card.component.scss
+++ b/src/modules/BreakfreeTradingSocial/components/sonar-feed-card/sonar-feed-card.component.scss
@@ -108,6 +108,7 @@
             .header-right-part {
                 display: flex;
                 width: 100%;
+                min-width: 33%;
                 align-items: center;
             }
 
